--- a/AzureLogAnalyticsAppender/AzureLogAnalyticsAppenderTester/AzureLogAnalyticsAppenderTester.csproj
+++ b/AzureLogAnalyticsAppender/AzureLogAnalyticsAppenderTester/AzureLogAnalyticsAppenderTester.csproj
@@ -34,8 +34,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="log4net, Version=1.2.15.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
-      <HintPath>..\packages\log4net.2.0.5\lib\net45-full\log4net.dll</HintPath>
-      <Private>True</Private>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Mobitrans.SourceCode\DLLs\Refrences\log4net.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -52,7 +52,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AzureLogAnalyticsAppender\AzureLogAnalyticsAppender.csproj">
